[gd_scene load_steps=34 format=2]

[ext_resource path="res://Creatures/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/Doodads/Rock.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Doodads/Skull.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Doodads/Grass.png" type="Texture" id=4]
[ext_resource path="res://Sprites/_art_/Environment/BlueBlock.png" type="Texture" id=5]
[ext_resource path="res://Levels/level1groundforreal.tres" type="TileSet" id=6]
[ext_resource path="res://Sprites/_art_/Environment/GreyBrickWallCrack1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/_art_/Environment/GreyBrickWallCrack2.png" type="Texture" id=8]
[ext_resource path="res://Sprites/_art_/Environment/GreyBrickWall.png" type="Texture" id=9]
[ext_resource path="res://Sprites/_art_/Environment/BlueBrickWall.png" type="Texture" id=10]
[ext_resource path="res://Sprites/_art_/Environment/GreyBrickWallVine.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Doodads/Grass2.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Doodads/Grass3.png" type="Texture" id=13]
[ext_resource path="res://Sprites/_art_/Environment/GreyDiamond.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Doodads/Grass0.png" type="Texture" id=15]
[ext_resource path="res://Sprites/_art_/Environment/DarkGreyBrickWall.png" type="Texture" id=16]
[ext_resource path="res://Creatures/Shambler.tscn" type="PackedScene" id=17]
[ext_resource path="res://Placeables/Portal.tscn" type="PackedScene" id=18]
[ext_resource path="res://Levels/Level1Actual.gd" type="Script" id=19]
[ext_resource path="res://SpecialEffectAnimations/MagicBook.tscn" type="PackedScene" id=20]
[ext_resource path="res://Placeables/InteractableBase.tscn" type="PackedScene" id=21]
[ext_resource path="res://Placeables/InteractZone.tscn" type="PackedScene" id=22]
[ext_resource path="res://SoundEffects/MagicSounds/MagicLong.mp3" type="AudioStream" id=23]
[ext_resource path="res://SpecialEffectAnimations/MagicBook.gd" type="Script" id=25]

[sub_resource type="TileSet" id=1]
0/name = "Grass.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Rock.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Skull.png 2"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Grass0.png 3"
3/texture = ExtResource( 15 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "GreyDiamond.png 4"
4/texture = ExtResource( 14 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 256, 256 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "Grass2.png 5"
5/texture = ExtResource( 12 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "Grass3.png 6"
6/texture = ExtResource( 13 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 64, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 256, 256, 0, 256, 0, 0, 256, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 256, 256, 0, 256, 0, 0, 256, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 256, 256, 0, 256, 0, 0, 256, 0 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 256, 256, 0, 256, 0, 0, 256, 0 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 256, 256, 0, 256, 0, 0, 256, 0 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 256, 256, 0, 256, 0, 0, 256, 0 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 256, 256, 0, 256, 0, 0, 256, 0 )

[sub_resource type="TileSet" id=8]
0/name = "BlueBlock.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 256, 256 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "BlueBrickWall.png 1"
1/texture = ExtResource( 10 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 256, 256 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 3 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "GreyBrickWall.png 2"
2/texture = ExtResource( 9 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 256, 256 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 4 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "GreyBrickWallCrack1.png 3"
3/texture = ExtResource( 7 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 256, 256 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 5 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "GreyBrickWallCrack2.png 4"
4/texture = ExtResource( 8 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 256, 256 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 6 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "GreyBrickWallVine.png 5"
5/texture = ExtResource( 11 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 256, 256 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 7 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "DarkGreyBrickWall.png 6"
6/texture = ExtResource( 16 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 256, 256 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 9 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0

[node name="Level1" type="Node2D"]
script = ExtResource( 19 )
__meta__ = {
"_edit_lock_": true
}

[node name="GroundTiles" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
show_collision = true
format = 1
tile_data = PoolIntArray( -524288, 536870914, 0, -524284, 2, 0, -524280, 2, 0, -524276, 2, 0, -524272, 2, 0, -524268, 2, 0, -524264, 2, 0, -524260, 2, 0, -524256, 2, 0, -524252, 2, 0, -524248, 2, 0, -524244, 2, 0, -524240, 2, 0, -524236, 2, 0, -524232, 2, 0, -524228, 2, 0, -524224, 2, 0, -524220, 2, 0, -524216, 2, 0, -524212, 2, 0, -524208, 2, 0, -262144, 536870912, 0, -262140, 536870912, 0, -262136, 0, 0, -262132, 0, 0, -262128, 0, 0, -262124, 0, 0, -262120, 0, 0, -262116, 1610612736, 0, -262112, 1610612736, 0, -262108, -1073741824, 0, -262104, 0, 0, -262100, 0, 0, -262096, 0, 0, -262092, 0, 0, -262088, 0, 0, -262084, 0, 0, -262080, 0, 0, -262076, 0, 0, -262072, 0, 0, -262068, 0, 0, -262064, 0, 0, 65532, 536870913, 0, 0, 536870912, 0, 4, 536870912, 0, 8, 0, 0, 12, 0, 0, 16, 0, 0, 20, 0, 0, 24, 0, 0, 28, 1610612736, 0, 32, 1610612736, 0, 36, -1073741824, 0, 40, 0, 0, 44, 0, 0, 48, 0, 0, 52, 0, 0, 56, 0, 0, 60, 0, 0, 64, 0, 0, 68, 0, 0, 72, 0, 0, 76, 0, 0, 80, 0, 0, 262144, 536870912, 0, 262148, 536870912, 0, 262152, 0, 0, 262156, 0, 0, 262160, 0, 0, 262164, 0, 0, 262168, 0, 0, 262172, 1610612736, 0, 262176, 1610612736, 0, 262180, -1073741824, 0, 262184, 0, 0, 262188, 0, 0, 262192, 0, 0, 262196, 0, 0, 262200, 0, 0, 262204, 0, 0, 262208, 0, 0, 262212, 0, 0, 262216, 0, 0, 262220, 0, 0, 262224, 0, 0, 524288, 536870912, 0, 524292, 536870912, 0, 524296, 0, 0, 524300, 0, 0, 524304, 0, 0, 524308, 0, 0, 524312, 0, 0, 524316, 1610612736, 0, 524320, 1610612736, 0, 524324, -1073741824, 0, 524328, 0, 0, 524332, 0, 0, 524336, 0, 0, 524340, 0, 0, 524344, 0, 0, 524348, 0, 0, 524352, 0, 0, 524356, 0, 0, 524360, 0, 0, 524364, 0, 0, 524368, 0, 0, 786432, 0, 0, 786436, 0, 0, 786440, 0, 0, 786444, 0, 0, 786448, 0, 0, 786452, 0, 0, 786456, 0, 0, 786460, 1610612736, 0, 786464, 1610612736, 0, 786468, -1073741824, 0, 786472, 0, 0, 786476, 0, 0, 786480, 0, 0, 786484, 0, 0, 786488, 0, 0, 786492, 0, 0, 786496, 0, 0, 786500, 0, 0, 786504, 0, 0, 786508, 0, 0, 786512, 0, 0, 1048576, 0, 0, 1048580, 0, 0, 1048584, 0, 0, 1048588, 0, 0, 1048592, 0, 0, 1048596, 0, 0, 1048600, 0, 0, 1048604, 1610612736, 0, 1048608, 1610612736, 0, 1048612, -1073741824, 0, 1048616, -1073741824, 0, 1048620, 0, 0, 1048624, 0, 0, 1048628, 0, 0, 1048632, 0, 0, 1048636, 0, 0, 1048640, 0, 0, 1048644, 0, 0, 1048648, 0, 0, 1048652, 0, 0, 1048656, 0, 0, 1310720, 0, 0, 1310724, 0, 0, 1310728, 0, 0, 1310732, 0, 0, 1310736, 0, 0, 1310740, 0, 0, 1310744, 0, 0, 1310748, 1610612736, 0, 1310752, 1610612736, 0, 1310756, -1073741824, 0, 1310760, -1073741824, 0, 1310764, 0, 0, 1310768, 0, 0, 1310772, 0, 0, 1310776, 0, 0, 1310780, 0, 0, 1310784, 0, 0, 1310788, 0, 0, 1310792, 0, 0, 1310796, 0, 0, 1310800, 0, 0, 1572864, 0, 0, 1572868, 0, 0, 1572872, 0, 0, 1572876, 0, 0, 1572880, 0, 0, 1572884, 0, 0, 1572888, 0, 0, 1572892, 1610612736, 0, 1572896, 1610612736, 0, 1572900, -1073741824, 0, 1572904, -1073741824, 0, 1572908, 0, 0, 1572912, 0, 0, 1572916, 0, 0, 1572920, 0, 0, 1572924, 0, 0, 1572928, 0, 0, 1572932, 0, 0, 1572936, 0, 0, 1572940, 0, 0, 1572944, 0, 0, 1835008, 0, 0, 1835012, 0, 0, 1835016, 0, 0, 1835020, 0, 0, 1835024, 0, 0, 1835028, 0, 0, 1835032, 0, 0, 1835036, 1610612736, 0, 1835040, 1610612736, 0, 1835044, -1073741824, 0, 1835048, -1073741824, 0, 1835052, 0, 0, 1835056, 0, 0, 1835060, 0, 0, 1835064, 0, 0, 1835068, 0, 0, 1835072, 0, 0, 1835076, 0, 0, 1835080, 0, 0, 1835084, 0, 0, 1835088, 0, 0, 1835112, 0, 0, 1835116, -1610612736, 0, 1835120, -1610612736, 0, 1835124, -1610612736, 0, 1835128, -1610612736, 0, 1835132, -1610612730, 0, 1835136, -1610612730, 0, 2097152, 1610612738, 0, 2097156, 1610612738, 0, 2097160, 1610612738, 0, 2097164, 1610612738, 0, 2097168, 1610612738, 0, 2097172, 1610612738, 0, 2097176, 1610612738, 0, 2097180, 1610612738, 0, 2097184, 1610612738, 0, 2097192, -1073741824, 0, 2097196, 0, 0, 2097200, 0, 0, 2097204, 0, 0, 2097208, 0, 0, 2097212, 0, 0, 2097216, 0, 0, 2097220, 0, 0, 2097224, 0, 0, 2097228, 0, 0, 2097232, 0, 0, 2097256, 0, 0, 2097260, -1610612736, 0, 2097264, -1610612736, 0, 2097268, -1610612736, 0, 2097272, -1610612736, 0, 2097276, -1610612730, 0, 2097280, -1610612730, 0, 2359336, -1073741824, 0, 2359340, 0, 0, 2359344, 0, 0, 2359352, 0, 0, 2359356, 0, 0, 2359360, 0, 0, 2359364, 0, 0, 2359368, 0, 0, 2359372, 0, 0, 2359376, 0, 0, 2359392, 0, 0, 2359396, 0, 0, 2359400, 0, 0, 2359404, -1610612736, 0, 2359408, -1610612736, 0, 2359412, -1610612736, 0, 2359416, -1610612736, 0, 2359420, -1610612730, 0, 2359424, -1610612730, 0, 2621484, 0, 0, 2621488, 0, 0, 2621496, 0, 0, 2621500, 0, 0, 2621504, 0, 0, 2621508, 0, 0, 2621512, 0, 0, 2621516, 0, 0, 2621520, 0, 0, 2621536, 0, 0, 2621540, 0, 0, 2621544, 0, 0, 2621548, -1610612736, 0, 2621552, -1610612736, 0, 2621556, -1610612736, 0, 2621560, -1610612736, 0, 2621564, -1610612730, 0, 2621568, -1610612729, 0, 2883620, -1073741822, 0, 2883624, -1073741824, 0, 2883628, 0, 0, 2883632, 0, 0, 2883656, 0, 0, 2883680, 0, 0, 2883684, 0, 0, 2883688, 0, 0, 2883692, -1610612736, 0, 2883696, -1610612736, 0, 2883700, -1610612736, 0, 2883704, -1610612730, 0, 2883708, -1610612730, 0, 2883712, -1610612730, 0, 3145764, -1073741822, 0, 3145768, -1073741824, 0, 3145772, 0, 0, 3145776, 0, 0, 3145780, 0, 0, 3145784, 0, 0, 3145788, -1073741824, 0, 3145792, -1073741824, 0, 3145796, 0, 0, 3145800, 1073741824, 0, 3145804, 1073741824, 0, 3145808, 1073741824, 0, 3145812, 1073741824, 0, 3145816, 0, 0, 3145820, 0, 0, 3145824, 0, 0, 3145828, 0, 0, 3145832, 0, 0, 3145836, -1610612729, 0, 3145840, -1610612736, 0, 3145844, -1610612729, 0, 3145848, -1610612730, 0, 3145852, -1610612729, 0, 3145856, -1610612730, 0, 3145860, -1610612729, 0, 3145864, -1610612729, 0, 3407908, -1073741822, 0, 3407912, -1073741824, 0, 3407916, 0, 0, 3407920, 0, 0, 3407924, 0, 0, 3407928, 0, 0, 3407932, -1073741824, 0, 3407936, -1073741824, 0, 3407940, 0, 0, 3407944, 1073741824, 0, 3407948, 1073741824, 0, 3407952, 1073741824, 0, 3407956, 1073741824, 0, 3407960, 0, 0, 3407964, 0, 0, 3407968, 0, 0, 3407972, 0, 0, 3407976, 0, 0, 3407980, -1610612736, 0, 3407984, -1610612736, 0, 3407988, -1610612736, 0, 3407992, -1610612730, 0, 3407996, -1610612730, 0, 3408000, -1610612730, 0, 3670060, 0, 0, 3670064, 0, 0, 3670120, 0, 0, 3670124, -1610612736, 0, 3670128, -1610612736, 0, 3670132, -1610612736, 0, 3670136, -1610612736, 0, 3670140, -1610612730, 0, 3670144, -1610612729, 0, 3932204, 0, 0, 3932208, 0, 0, 3932264, 0, 0, 3932268, -1610612736, 0, 3932272, -1610612736, 0, 3932276, -1610612736, 0, 3932280, -1610612736, 0, 3932284, -1610612730, 0, 3932288, -1610612730, 0, 4194348, -1073741824, 0, 4194352, -1073741824, 0, 4194408, 1610612736, 0, 4194412, -1610612736, 0, 4194416, -1610612736, 0, 4194420, -1610612736, 0, 4194424, -1610612736, 0, 4194428, -1610612730, 0, 4194432, -1610612730, 0, 4456492, -1073741824, 0, 4456496, -1073741824, 0, 4456552, 1610612736, 0, 4456556, -1610612736, 0, 4456560, -1610612736, 0, 4456564, -1610612736, 0, 4456568, -1610612736, 0, 4456572, -1610612730, 0, 4456576, -1610612730, 0, 4718636, -1073741818, 0, 4718640, -1073741823, 0, 4980776, -1073741818, 0, 4980780, -1073741823, 0, 4980784, -1073741818, 0, 4980788, -1073741823, 0, 5242920, -1073741823, 0, 5242924, -1073741818, 0, 5242928, -1073741823, 0, 5242932, -1073741818, 0, 5505064, -1073741818, 0, 5505068, -1073741823, 0, 5505072, -1073741818, 0, 5505076, -1073741823, 0, 5767208, -1073741823, 0, 5767212, -1073741818, 0, 5767216, -1073741823, 0, 5767220, -1073741818, 0 )

[node name="Doodads" type="TileMap" parent="GroundTiles"]
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 4, 536870912, 0, 393268, 2, 0, 458762, 0, 0, 589857, 1, 0, 720950, 1, 0, 1114144, 1073741825, 0, 1245254, 4, 0, 1245258, 3, 0, 1376270, 1073741825, 0, 1376327, 1, 0, 1376330, 536870912, 0, 1441807, 1610612737, 0, 1441838, 1073741825, 0, 1507399, 0, 0, 1704001, 1, 0, 2097173, 1073741824, 0, 2162710, 1073741825, 0, 2818116, 536870913, 0, 2883621, -1610612731, 0, 2883624, 1073741824, 0, 2883626, 536870915, 0, 3014693, -1610612730, 0, 3211301, -1610612730, 0, 3407908, -1610612731, 0, 3407909, -1610612730, 0, 3538981, -1610612731, 0, 3604520, 1073741827, 0, 5373998, -1073741820, 0 )

[node name="WallTiles" type="TileMap" parent="."]
tile_set = SubResource( 8 )
format = 1
tile_data = PoolIntArray( -720900, 1, 0, -786432, 0, 0, -786428, 0, 0, -786424, 0, 0, -786420, 0, 0, -786416, 0, 0, -786412, 0, 0, -786408, 0, 0, -786404, 0, 0, -786400, 0, 0, -786396, 0, 0, -786392, 0, 0, -786388, 0, 0, -786384, 0, 0, -786380, 0, 0, -786376, 0, 0, -786372, 0, 0, -786368, 0, 0, -786364, 0, 0, -786360, 0, 0, -786356, 0, 0, -786352, -536870908, 0, -458756, 536870913, 0, -524208, -536870908, 0, -458676, -536870910, 0, -196616, 536870913, 0, -196612, 536870913, 0, -262064, -536870910, 0, -196532, -536870910, 0, -131051, -1610612734, 0, 65528, 536870913, 0, 24, -1610612734, 0, 80, -536870908, 0, 65612, -536870910, 0, 196649, 1610612739, 0, 196653, 1610612741, 0, 196657, 4, 0, 327672, 536870913, 0, 327676, 536870913, 0, 262224, -536870908, 0, 458793, -1610612731, 0, 589820, 536870913, 0, 524368, -536870908, 0, 589891, -1073741819, 0, 720937, -1073741820, 0, 851964, 536870913, 0, 786512, -536870908, 0, 1114108, 1, 0, 1048656, -536870909, 0, 1114137, -1610612733, 0, 1376252, 1, 0, 1310774, 2, 0, 1310800, -536870907, 0, 1638396, 1, 0, 1572944, -1610612733, 0, 1572964, 2, 0, 1572968, 1073741826, 0, 1572972, 2, 0, 1572976, 2, 0, 1572980, 2, 0, 1572984, 2, 0, 1572988, 2, 0, 1572992, 2, 0, 1572996, -1610612730, 0, 1900540, 1, 0, 1835088, -1610612732, 0, 1835108, 2, 0, 1835140, -1610612730, 0, 2162684, 1610612737, 0, 2097188, 2, 0, 2097232, -1610612732, 0, 2097244, 2, 0, 2097248, 2, 0, 2097252, 2, 0, 2097284, -1610612730, 0, 2424828, 1610612737, 0, 2359296, 1610612736, 0, 2359300, 1610612736, 0, 2359304, 1610612736, 0, 2359308, 1610612736, 0, 2359312, 1610612736, 0, 2359316, 1610612736, 0, 2359320, 1610612736, 0, 2359324, 1610612736, 0, 2359328, 1610612736, 0, 2359332, 4, 0, 2359348, 4, 0, 2359376, -1610612732, 0, 2359388, 2, 0, 2359428, -1610612730, 0, 2621472, 0, 0, 2621476, 1610612740, 0, 2621480, 5, 0, 2621492, 3, 0, 2621520, -1610612733, 0, 2621532, 2, 0, 2621572, -1610612730, 0, 2883616, 0, 0, 2883636, 4, 0, 2883640, 1073741828, 0, 2883644, 1073741826, 0, 2883648, 1610612738, 0, 2883652, 3, 0, 2883660, 4, 0, 2883664, 4, 0, 2883668, 1073741827, 0, 2883672, 4, 0, 2883676, 2, 0, 2883716, -1610612730, 0, 2883720, -1610612730, 0, 2883724, -1610612730, 0, 3145760, 0, 0, 3145868, -1610612730, 0, 3407904, 0, 0, 3408004, -1610612730, 0, 3408008, -1610612730, 0, 3408012, -1610612730, 0, 3670048, 0, 0, 3670052, 1610612741, 0, 3670056, 1610612741, 0, 3670068, 1073741827, 0, 3670072, 1073741828, 0, 3670076, 1610612739, 0, 3670080, 1610612738, 0, 3670084, 4, 0, 3670088, 1073741827, 0, 3670092, 1073741828, 0, 3670096, 1073741828, 0, 3670100, 2, 0, 3670104, 2, 0, 3670108, 3, 0, 3670112, 2, 0, 3670116, 2, 0, 3670148, -1610612730, 0, 3932200, 1610612740, 0, 3932212, 3, 0, 3932260, 2, 0, 3932292, -1610612730, 0, 4194344, 2, 0, 4194356, 2, 0, 4194404, -1073741821, 0, 4194436, -1610612730, 0, 4456488, -1073741820, 0, 4456500, -1073741822, 0, 4456548, -1073741822, 0, 4456580, -1610612730, 0, 4718628, -1073741823, 0, 4718632, -1073741823, 0, 4718644, -1073741823, 0, 4718648, -1073741823, 0, 4718692, -1073741822, 0, 4718696, -1073741822, 0, 4718700, -1073741822, 0, 4718704, -1073741822, 0, 4718708, 2, 0, 4718712, 2, 0, 4718716, 2, 0, 4718720, 2, 0, 4718724, -1610612730, 0, 4980772, -1073741823, 0, 4980792, -1073741823, 0, 5242916, -1073741823, 0, 5242936, -1073741823, 0, 5505060, -1073741823, 0, 5505080, -1073741823, 0, 5767204, -1073741823, 0, 5767224, -1073741823, 0, 6029348, -1073741823, 0, 6029352, -1073741823, 0, 6029356, -1073741823, 0, 6029360, -1073741823, 0, 6029364, -1073741823, 0, 6029368, -1073741823, 0 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( -133, 130 )

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2( 2, 2 )

[node name="Shambler" parent="." instance=ExtResource( 17 )]
position = Vector2( 3154, 3300 )

[node name="Shambler2" parent="." instance=ExtResource( 17 )]
position = Vector2( 7776, 3174 )

[node name="Portal" parent="." instance=ExtResource( 18 )]
position = Vector2( 8833, 3207 )
LevelToGoTo = "res://Levels/Level2.tscn"

[node name="MagicBook" parent="." instance=ExtResource( 20 )]
position = Vector2( 3068, 5372 )
scale = Vector2( 1.12, 1.12 )
script = ExtResource( 25 )

[node name="InteractableBase" parent="MagicBook" instance=ExtResource( 21 )]
scale = Vector2( 0.5, 0.4 )
dialogueKeyToPlay = "spellbookj"
InteractTrigger = "OnInteract"

[node name="InteractZone" parent="MagicBook" instance=ExtResource( 22 )]
scale = Vector2( 2, 1.5 )

[node name="InteractableBase2" parent="MagicBook" instance=ExtResource( 21 )]
scale = Vector2( 0.5, 0.4 )
dialogueKeyToPlay = "spellbooks"
InteractTrigger = "OnInteract"

[node name="Knawledge" type="AudioStreamPlayer2D" parent="MagicBook"]
scale = Vector2( 0.5, 0.4 )
stream = ExtResource( 23 )
volume_db = 11.064

[node name="Timer" type="Timer" parent="MagicBook"]
wait_time = 3.0
one_shot = true

[connection signal="ReadPyro" from="Player" to="MagicBook" method="_on_Player_ReadPyro"]
[connection signal="body_entered" from="MagicBook/InteractZone" to="." method="_on_InteractZone_body_entered"]
[connection signal="body_exited" from="MagicBook/InteractZone" to="." method="_on_InteractZone_body_exited"]
[connection signal="timeout" from="MagicBook/Timer" to="MagicBook" method="_on_Timer_timeout"]
